--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "app-root-path": "^2.1.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "http-errors": "^1.6.3",
     "mongoose": "^5.1.6",
